0.gibin/1.SAMPLES/ec2-local.tf

#create ec2 and store instance ip in local file 


resource "aws_instance" "example" {
  ami           = "ami-b374d5a5"
  instance_type = "t2.micro"

  provisioner "local-exec" {
    command = "echo ${aws_instance.example.public_ip} > ip_address.txt"
  }
}
